models/deepseek/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepseek
  namespace: llama-serve
  labels:
    app: deepseek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepseek
  template:
    metadata:
      labels:
        app: deepseek
    spec:
      containers:
        - name: deepseek
          image: 'registry.redhat.io/rhaiis/vllm-cuda-rhel9:3.2.0-1754088865-hotfix-1'
          imagePullPolicy: IfNotPresent
          command:
            - python
            - '-m'
            - vllm.entrypoints.openai.api_server
          args:
            - '--port=8000'
            - '--model=/mnt/models'
            - '--served-model-name=DeepSeek-R1-Distill-Qwen-32B'
            - '--tensor-parallel-size=2'
            - '--max-model-len=101216'
            - '--gpu-memory-utilization=0.9'
            - '--enable-auto-tool-choice'
            - '--tool-call-parser'
            - llama3_json
            - '--chat-template'
            - /app/data/template/tool_chat_template_deepseekr1.jinja
          resources:
            limits:
              cpu: '10'
              memory: 32Gi
              nvidia.com/gpu: '2'
            requests:
              cpu: '2'
              memory: 6Gi
              nvidia.com/gpu: '2'
          volumeMounts:
            - name: cache-volume
              mountPath: /mnt/models
              subPath: DeepSeek-R1-Distill-Qwen-32B
            - name: shm
              mountPath: /dev/shm 
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: models
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
      restartPolicy: Always
