models/deepseek/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepseek
  namespace: llama-serve
spec:
  selector:
    app: deepseek
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
